[package]
name = "cranelift-jit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2018"

[dependencies]
cranelift = "0.69.0"
cranelift-module = "0.69.0"
cranelift-jit = "0.69.0"
peg = "0.7"
tuix = { git = "https://github.com/geom3trik/tuix", branch = "reactive" }
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master" }
daggy = "*"